Fix: recent files / projects not loading on start page. Collapsing of start page panels has been disabled as it was causing too many issues and offering little actual functionality - Bug #98007 r=toddw rn=
(integrated from komodo (trunk) change 77971 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@12268 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/startpage/startpage.css
+++ b/src/chrome/komodo/skin/startpage/startpage.css
@@ -122,8 +122,7 @@ treechildren::-moz-tree-image(project-icon),
 }
 
 .less-icon, .more-icon {
-  margin: 0 0 0 5px;
-  cursor: pointer;
+  list-style-image: none !important;
 }
 
 vbox[anonid="quicklinks-right"]
